--- a/public/index.html
+++ b/public/index.html
@@ -16,28 +16,17 @@
   <body></body>
   <script>
     function init() {
-      miaConsentManager({
-        scripts: [
-          {
-            name: 'Google Analytics',
-            description:
-              'Allows us to analyze the statistics of visits to our site',
-            domain: 'google.com',
-            gtm: {
-              grantEvent: 'GOOGLE_ANALYTICS',
-            },
-          },
-          {
-            name: 'Linked-In',
-            description:
-              'Allows us to analyze the statistics of visits to our site',
-            domain: 'linkedin.com',
-            gtm: {
-              grantEvent: 'LINKED_IN',
-            },
-          },
-        ],
-      })
+      miaConsentManager()
     }
+  </script>
+
+  <script id="gascript" type="application/json" >
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      
+      ga('create', 'UA-XXXXX-Y', 'auto');
+      ga('send', 'pageview');
   </script>
 </html>
